# TestRustAPI

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/2022-09-16-185013_create_user/: up.sql
src/: lib.rs  models.rs  schema.rs
