[package]
name = "first_rust_project"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["mysql"] }
fake = "2.5.0"
dotenvy = "0.15"

[[bin]]
name = "main"
doc = false

[lib]
doc = false